wip: adding codegen for react query

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@fortawesome/pro-regular-svg-icons": "6.1.2",
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
-    "@graphql-codegen/plugin-helpers": "5.0.3",
+    "@graphql-codegen/plugin-helpers": "5.0.4",
     "@graphql-codegen/typescript-document-nodes": "4.0.7",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
@@ -113,6 +113,7 @@
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "0.5.11",
+    "@tanstack/react-query": "^5.40.0",
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
     "@twind/with-next": "1.2.2",
@@ -218,11 +219,13 @@
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/client-preset": "4.2.6",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
     "@graphql-codegen/schema-ast": "4.0.2",
-    "@graphql-codegen/typescript": "4.0.6",
+    "@graphql-codegen/typescript": "4.0.7",
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
-    "@graphql-codegen/typescript-operations": "4.2.0",
+    "@graphql-codegen/typescript-operations": "4.2.1",
+    "@graphql-codegen/typescript-react-query": "6.1.0",
     "@graphql-eslint/eslint-plugin": "3.20.1",
     "@graphql-hive/cli": "0.34.0",
     "@hon2a/cypress-without": "2.1.0",
@@ -260,6 +263,7 @@
     "@swc/core": "1.5.7",
     "@swc/jest": "0.2.36",
     "@swc/plugin-styled-components": "2.0.6",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "10.0.0",
     "@testing-library/jest-dom": "6.4.2",
