--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -24,35 +24,32 @@
       }
     },
     "serve": {
+      "defaultConfiguration": "dev",
       "executor": "@nx/next:server",
       "options": {
         "buildTarget": "web:build",
-        "dev": true,
         "turbo": false,
         "port": 3000,
         "hostname": "0.0.0.0",
         "maxWorkers": 4
       },
       "configurations": {
-        "ci": {
-          "buildTarget": "web:build:ci",
-          "dev": false
+        "dev": {
+          "buildTarget": "web:build:dev"
         },
         "test": {
           "buildTarget": "web:build:test",
-          "port": 3001,
+          "port": 3001
+        },
+        "ci": {
+          "buildTarget": "web:build:ci",
           "dev": false
         },
         "prod": {
           "buildTarget": "web:build:prod",
           "dev": false
-        },
-        "dev": {
-          "buildTarget": "web:build:dev",
-          "open": true
         }
-      },
-      "defaultConfiguration": "dev"
+      }
     },
     "export": {
       "executor": "@nx/next:export",
