--- a/package.json
+++ b/package.json
@@ -67,8 +67,10 @@
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.4",
     "@graphql-codegen/typescript-document-nodes": "4.0.7",
+    "@graphql-codegen/typescript-react-query": "^6.1.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@lexical/html": "0.15.0",
     "@lexical/link": "0.15.0",
     "@lexical/react": "0.15.0",
@@ -113,7 +115,7 @@
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "0.5.11",
-    "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query": "5.45.1",
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
     "@twind/with-next": "1.2.2",
@@ -150,6 +152,7 @@
     "graphql-ws": "5.16.0",
     "isolated-vm": "4.6.0",
     "jest-text-transformer": "1.0.4",
+    "jotai": "^2.8.3",
     "jquery": "3.6.4",
     "jsonwebtoken": "9.0.2",
     "jwks-rsa": "3.0.1",
@@ -213,19 +216,20 @@
     "winston": "3.8.2",
     "ws": "8.17.0",
     "yargs": "17.7.2",
-    "zen-observable-ts": "1.1.0"
+    "zen-observable-ts": "1.1.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/client-preset": "4.2.6",
+    "@graphql-codegen/client-preset": "4.3.0",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
     "@graphql-codegen/schema-ast": "4.0.2",
     "@graphql-codegen/typescript": "4.0.7",
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
     "@graphql-codegen/typescript-operations": "4.2.1",
-    "@codelab-app/typescript-react-query": "6.1.5",
+    "@graphql-codegen/typescript-react-query": "^6.1.0",
     "@graphql-eslint/eslint-plugin": "3.20.1",
     "@graphql-hive/cli": "0.34.0",
     "@hon2a/cypress-without": "2.1.0",
@@ -250,6 +254,7 @@
     "@nx/web": "19.2.1",
     "@nx/webpack": "19.2.1",
     "@nx/workspace": "19.2.1",
+    "@parcel/watcher": "^2.4.1",
     "@playwright/test": "^1.44.1",
     "@storybook/addon-essentials": "7.5.3",
     "@storybook/addon-interactions": "7.5.3",
