--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.8",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
