--- a/package.json
+++ b/package.json
@@ -204,9 +204,9 @@
     "twind": "0.16.19",
     "type-fest": "4.12.0",
     "typebox-validators": "0.3.5",
-    "uniforms": "3.10.2",
-    "uniforms-antd": "3.10.2",
-    "uniforms-bridge-json-schema": "3.10.2",
+    "uniforms": "4.0.0-alpha.5",
+    "uniforms-antd": "4.0.0-alpha.5",
+    "uniforms-bridge-json-schema": "4.0.0-alpha.5",
     "use-resize-observer": "8.0.0",
     "uuid": "8.3.2",
     "voca": "1.4.0",
@@ -218,6 +218,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.8",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
