wip: restoring build app use case

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -697,6 +697,12 @@
       "@codelab/frontend-domain-domain/store": [
         "libs/frontend/domain/domain/src/store/index.ts"
       ],
+      "@codelab/frontend-domain-domain/services": [
+        "libs/frontend/domain/domain/src/services/index.ts"
+      ],
+      "@codelab/frontend-domain-domain/actions": [
+        "libs/frontend/domain/domain/src/actions/index.ts"
+      ],
       "@codelab/frontend-domain-element/actions": [
         "libs/frontend/domain/element/src/actions/index.ts"
       ],
