--- a/package.json
+++ b/package.json
@@ -245,6 +245,8 @@
     "twind": "0.16.19",
     "type-fest": "4.12.0",
     "typebox-validators": "0.3.5",
+    "uniforms": "3.10.2",
+    "uniforms-antd": "3.10.2",
     "use-resize-observer": "8.0.0",
     "uuid": "8.3.2",
     "vaul": "^0.9.1",
@@ -276,27 +278,28 @@
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/cypress": "19.3.2",
-    "@nx/devkit": "19.3.2",
-    "@nx/eslint": "19.3.2",
-    "@nx/eslint-plugin": "19.3.2",
-    "@nx/jest": "19.3.2",
-    "@nx/js": "19.3.2",
-    "@nx/nest": "19.3.2",
-    "@nx/next": "19.3.2",
-    "@nx/node": "19.3.2",
-    "@nx/playwright": "19.3.2",
-    "@nx/plugin": "19.3.2",
-    "@nx/react": "19.3.2",
-    "@nx/storybook": "19.3.2",
-    "@nx/vite": "19.3.2",
-    "@nx/web": "19.3.2",
-    "@nx/webpack": "19.3.2",
-    "@nx/workspace": "19.3.2",
+    "@nx/cypress": "19.4.1",
+    "@nx/devkit": "19.4.1",
+    "@nx/eslint": "19.4.1",
+    "@nx/eslint-plugin": "19.4.1",
+    "@nx/jest": "19.4.1",
+    "@nx/js": "19.4.1",
+    "@nx/nest": "19.4.1",
+    "@nx/next": "19.4.1",
+    "@nx/node": "19.4.1",
+    "@nx/playwright": "19.4.1",
+    "@nx/plugin": "19.4.1",
+    "@nx/react": "19.4.1",
+    "@nx/storybook": "19.4.1",
+    "@nx/vite": "19.4.1",
+    "@nx/web": "19.4.1",
+    "@nx/webpack": "19.4.1",
+    "@nx/workspace": "19.4.1",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "^1.44.1",
     "@storybook/addon-essentials": "8.1.11",
     "@storybook/addon-interactions": "8.1.11",
+    "@storybook/addon-themes": "^8.1.11",
     "@storybook/core-common": "8.1.11",
     "@storybook/core-server": "8.1.11",
     "@storybook/jest": "^0.2.3",
@@ -373,7 +376,7 @@
     "concurrently": "7.0.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
-    "cypress": "13.9.0",
+    "cypress": "13.13.0",
     "cypress-jest-adapter": "0.1.1",
     "cypress-log-to-output": "1.1.2",
     "cypress-multi-reporters": "1.6.3",
@@ -418,7 +421,7 @@
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.3.2",
+    "nx": "19.4.1",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.38",
     "process": "0.11.10",
@@ -430,7 +433,7 @@
     "ttab": "^0.9.0",
     "typescript": "5.4.5",
     "utility-types": "3.10.0",
-    "vite": "~5.0.0",
+    "vite": "5.3.3",
     "wait-on": "6.0.1"
   },
   "resolutions": {
