--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@ant-design/cssinjs": "1.20.0",
     "@ant-design/icons": "5.3.0",
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@ant-design/pro-components": "2.7.1",
+    "@ant-design/pro-components": "2.7.10",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
     "@auth0/nextjs-auth0": "3.5.0",
@@ -247,6 +247,7 @@
     "typebox-validators": "0.3.5",
     "uniforms": "3.10.2",
     "uniforms-antd": "3.10.2",
+    "uniforms-bridge-json-schema": "3.10.2",
     "use-resize-observer": "8.0.0",
     "uuid": "8.3.2",
     "vaul": "^0.9.1",
