--- a/package.json
+++ b/package.json
@@ -239,6 +239,7 @@
     "styled-components": "6.1.8",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "2.3.1",
@@ -279,23 +280,23 @@
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/cypress": "19.4.1",
-    "@nx/devkit": "19.4.1",
-    "@nx/eslint": "19.4.1",
-    "@nx/eslint-plugin": "19.4.1",
-    "@nx/jest": "19.4.1",
-    "@nx/js": "19.4.1",
-    "@nx/nest": "19.4.1",
-    "@nx/next": "19.4.1",
-    "@nx/node": "19.4.1",
-    "@nx/playwright": "19.4.1",
-    "@nx/plugin": "19.4.1",
-    "@nx/react": "19.4.1",
-    "@nx/storybook": "19.4.1",
-    "@nx/vite": "19.4.1",
-    "@nx/web": "19.4.1",
-    "@nx/webpack": "19.4.1",
-    "@nx/workspace": "19.4.1",
+    "@nx/cypress": "19.4.2",
+    "@nx/devkit": "19.4.2",
+    "@nx/eslint": "19.4.2",
+    "@nx/eslint-plugin": "19.4.2",
+    "@nx/jest": "19.4.2",
+    "@nx/js": "19.4.2",
+    "@nx/nest": "19.4.2",
+    "@nx/next": "19.4.2",
+    "@nx/node": "19.4.2",
+    "@nx/playwright": "19.4.2",
+    "@nx/plugin": "19.4.2",
+    "@nx/react": "19.4.2",
+    "@nx/storybook": "19.4.2",
+    "@nx/vite": "19.4.2",
+    "@nx/web": "19.4.2",
+    "@nx/webpack": "19.4.2",
+    "@nx/workspace": "19.4.2",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "^1.44.1",
     "@storybook/addon-essentials": "8.1.11",
@@ -422,7 +423,7 @@
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.4.1",
+    "nx": "19.4.2",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.38",
     "process": "0.11.10",
