--- a/libs/frontend/infra/fetch/project.json
+++ b/libs/frontend/infra/fetch/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-infra-gql",
+  "name": "frontend-infra-fetch",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/frontend/infra/gql/src",
+  "sourceRoot": "libs/frontend/infra/fetch/src",
   "projectType": "library",
   "tags": [
     "projectType:library",
@@ -9,6 +9,9 @@
     "layer:infra",
     "scope:frontend"
   ],
-  "// targets": "to see all targets run: nx show project frontend-infra-gql --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
