--- a/libs/frontend/infra/graphql/project.json
+++ b/libs/frontend/infra/graphql/project.json
@@ -9,9 +9,6 @@
     "layer:infra",
     "scope:frontend"
   ],
-  "targets": {
-    "lint": {
-      "executor": "@nx/eslint:lint"
-    }
-  }
+  "// targets": "to see all targets run: nx show project frontend-infra-graphql --web",
+  "targets": {}
 }
