--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "commit": "git-cz",
     "cpack": "scripts/circleci/circleci-pack.sh",
     "git:prune": "git gc --aggressive --prune=now",
-    "prepare": "husky"
+    "prepare": "husky",
+    "add:ui": "pnpm cross-env TS_NODE_PROJECT=tsconfig.base.json npx shadcn-ui@latest add"
   },
   "private": true,
   "dependencies": {
@@ -100,6 +101,8 @@
     "@opentelemetry/sdk-trace-web": "1.22.0",
     "@opentelemetry/semantic-conventions": "1.22.0",
     "@pinojs/json-colorizer": "4.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
     "@rjsf/antd": "5.18.3",
@@ -124,6 +127,7 @@
     "chalk": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "2.3.2",
     "clsx": "2.1.0",
     "cm6-graphql": "0.0.9",
@@ -192,6 +196,8 @@
     "styled-components": "6.1.8",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "2.3.1",
     "twind": "0.16.19",
     "type-fest": "4.12.0",
