--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -50,14 +50,14 @@ jobs:
             - staging
       requires:
         - setup-workspace
-  - e2e:
-      filters:
-        branches:
-          ignore:
-            - master
-            - staging
-      requires:
-        - setup-workspace
+  # - e2e:
+  #     filters:
+  #       branches:
+  #         ignore:
+  #           - master
+  #           - staging
+  #     requires:
+  #       - setup-workspace
   - notify-success:
       filters:
         branches:
@@ -69,4 +69,4 @@ jobs:
         - codegen
         - unit
         - integration
-        - e2e
+        # - e2e
