--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -262,6 +262,9 @@
       "@codelab/frontend-application-atom/use-cases/get-atoms": [
         "libs/frontend/application/atom/src/use-cases/get-atoms/index.ts"
       ],
+      "@codelab/frontend-application-atom/use-cases/get-atoms/server": [
+        "libs/frontend/application/atom/src/use-cases/get-atoms/server/index.ts"
+      ],
       "@codelab/frontend-application-atom/use-cases/get-select-atom-options": [
         "libs/frontend/application/atom/src/use-cases/get-select-atom-options/index.ts"
       ],
@@ -331,6 +334,9 @@
       "@codelab/frontend-application-component/services": [
         "libs/frontend/application/component/src/services/index.ts"
       ],
+      "@codelab/frontend-application-component/use-cases/component-list": [
+        "libs/frontend/application/component/src/use-cases/component-list/index.ts"
+      ],
       "@codelab/frontend-application-component/use-cases/component-development": [
         "libs/frontend/application/component/src/use-cases/component-development/index.ts"
       ],
@@ -342,6 +348,9 @@
       ],
       "@codelab/frontend-application-component/use-cases/get-component": [
         "libs/frontend/application/component/src/use-cases/get-component/index.ts"
+      ],
+      "@codelab/frontend-application-component/use-cases/export-component": [
+        "libs/frontend/application/component/src/use-cases/export-component/index.ts"
       ],
       "@codelab/frontend-application-component/use-cases/import-component": [
         "libs/frontend/application/component/src/use-cases/import-component/index.ts"
@@ -661,6 +670,9 @@
       "@codelab/frontend-domain-app/test": [
         "libs/frontend/domain/app/src/test/index.ts"
       ],
+      "@codelab/frontend-domain-atom/actions": [
+        "libs/frontend/domain/atom/src/actions/index.ts"
+      ],
       "@codelab/frontend-domain-atom/services": [
         "libs/frontend/domain/atom/src/services/index.ts"
       ],
@@ -678,6 +690,9 @@
       ],
       "@codelab/frontend-domain-auth-guard/test": [
         "libs/frontend/domain/auth-guard/src/test/index.ts"
+      ],
+      "@codelab/frontend-domain-component/actions": [
+        "libs/frontend/domain/component/src/actions/index.ts"
       ],
       "@codelab/frontend-domain-component/services": [
         "libs/frontend/domain/component/src/services/index.ts"
