wip: remove app.service

--- a/libs/frontend/infra/gql/project.json
+++ b/libs/frontend/infra/gql/project.json
@@ -5,7 +5,7 @@
   "projectType": "library",
   "tags": [
     "projectType:library",
-    "type:abstract",
+    "type:concrete",
     "layer:infra",
     "scope:frontend"
   ],
