--- a/package.json
+++ b/package.json
@@ -199,6 +199,7 @@
     "nestjs-typebox": "3.0.0-next.8",
     "next": "14.2.4",
     "next-http-proxy-middleware": "1.2.6",
+    "next-safe-action": "^7.1.3",
     "next-seo": "6.5.0",
     "next-themes": "^0.3.0",
     "object-typed": "1.0.0",
@@ -280,23 +281,23 @@
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/cypress": "19.4.2",
-    "@nx/devkit": "19.4.2",
-    "@nx/eslint": "19.4.2",
-    "@nx/eslint-plugin": "19.4.2",
-    "@nx/jest": "19.4.2",
-    "@nx/js": "19.4.2",
-    "@nx/nest": "19.4.2",
-    "@nx/next": "19.4.2",
-    "@nx/node": "19.4.2",
-    "@nx/playwright": "19.4.2",
-    "@nx/plugin": "19.4.2",
-    "@nx/react": "19.4.2",
-    "@nx/storybook": "19.4.2",
-    "@nx/vite": "19.4.2",
-    "@nx/web": "19.4.2",
-    "@nx/webpack": "19.4.2",
-    "@nx/workspace": "19.4.2",
+    "@nx/cypress": "19.4.3",
+    "@nx/devkit": "19.4.3",
+    "@nx/eslint": "19.4.3",
+    "@nx/eslint-plugin": "19.4.3",
+    "@nx/jest": "19.4.3",
+    "@nx/js": "19.4.3",
+    "@nx/nest": "19.4.3",
+    "@nx/next": "19.4.3",
+    "@nx/node": "19.4.3",
+    "@nx/playwright": "19.4.3",
+    "@nx/plugin": "19.4.3",
+    "@nx/react": "19.4.3",
+    "@nx/storybook": "19.4.3",
+    "@nx/vite": "19.4.3",
+    "@nx/web": "19.4.3",
+    "@nx/webpack": "19.4.3",
+    "@nx/workspace": "19.4.3",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "^1.44.1",
     "@storybook/addon-essentials": "8.1.11",
@@ -423,7 +424,7 @@
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.4.2",
+    "nx": "19.4.3",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.38",
     "process": "0.11.10",
