--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "animate.css": "4.1.1",
     "antd": "5.18.3",
     "auth0": "4.4.0",
+    "auto-bind": "^5.0.1",
     "axios": "1.7.1",
     "body-parser": "1.20.2",
     "chalk": "4.1.2",
@@ -273,6 +274,7 @@
     "@graphql-codegen/typescript": "4.0.7",
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
     "@graphql-codegen/typescript-operations": "4.2.1",
+    "@graphql-codegen/visitor-plugin-common": "^5.3.1",
     "@graphql-eslint/eslint-plugin": "3.20.1",
     "@graphql-hive/cli": "0.34.0",
     "@hon2a/cypress-without": "2.1.0",
@@ -436,11 +438,15 @@
     "ttab": "^0.9.0",
     "typescript": "5.4.5",
     "utility-types": "3.10.0",
+    "verdaccio": "^5.0.4",
     "vite": "5.3.3",
     "wait-on": "6.0.1"
   },
   "resolutions": {
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
