--- a/libs/external/codelab-codegen/typescript-fetch/.eslintrc.json
+++ b/libs/external/codelab-codegen/typescript-fetch/.eslintrc.json
@@ -5,7 +5,9 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["libs/external/codelab-codegen/fetch/tsconfig.*?.json"]
+        "project": [
+          "libs/external/codelab-codegen/typescript-fetch/tsconfig.*?.json"
+        ]
       },
       "rules": {
         "id-length": "off",
