--- a/libs/external/codelab-codegen/typescript-fetch/project.json
+++ b/libs/external/codelab-codegen/typescript-fetch/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "codelab-codegen-fetch",
+  "name": "codelab-codegen-typescript-fetch",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/external/codelab-codegen/fetch/src",
+  "sourceRoot": "libs/external/codelab-codegen/typescript-fetch/src",
   "projectType": "library",
   "release": {
     "version": {
@@ -17,11 +17,11 @@
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/external/codelab-codegen/fetch",
-        "tsConfig": "libs/external/codelab-codegen/fetch/tsconfig.lib.json",
-        "packageJson": "libs/external/codelab-codegen/fetch/package.json",
-        "main": "libs/external/codelab-codegen/fetch/src/index.ts",
-        "assets": ["libs/external/codelab-codegen/fetch/*.md"]
+        "outputPath": "dist/libs/external/codelab-codegen/typescript-fetch",
+        "tsConfig": "libs/external/codelab-codegen/typescript-fetch/tsconfig.lib.json",
+        "packageJson": "libs/external/codelab-codegen/typescript-fetch/package.json",
+        "main": "libs/external/codelab-codegen/typescript-fetch/src/index.ts",
+        "assets": ["libs/external/codelab-codegen/typescript-fetch/*.md"]
       }
     },
     "nx-release-publish": {
@@ -33,7 +33,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/external/codelab-codegen/fetch/jest.config.ts",
+        "jestConfig": "libs/external/codelab-codegen/typescript-fetch/jest.config.ts",
         "runInBand": true,
         "reporters": ["default"]
       }
@@ -45,7 +45,7 @@
         "color": true,
         "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
-        "jestConfig": "libs/external/codelab-codegen/fetch/jest.config.ts"
+        "jestConfig": "libs/external/codelab-codegen/typescript-fetch/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -68,7 +68,7 @@
         "memoryLimit": 8192,
         "parallel": 3,
         "testPathIgnorePatterns": ["i.spec.ts"],
-        "jestConfig": "libs/external/codelab-codegen/fetch/jest.config.ts"
+        "jestConfig": "libs/external/codelab-codegen/typescript-fetch/jest.config.ts"
       },
       "configurations": {
         "dev": {
