--- a/libs/external/codelab-codegen/typescript-fetch/tsconfig.json
+++ b/libs/external/codelab-codegen/typescript-fetch/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "strict": false,
+    "strictNullChecks": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
