--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
     "@auth0/nextjs-auth0": "3.5.0",
+    "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codelab/eslint-plugin": "file:dist/libs/tools/eslint-plugin",
     "@codelab/tools-workspace": "file:dist/libs/tools/workspace",
-    "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codemirror/autocomplete": "6.12.0",
     "@codemirror/commands": "6.3.3",
     "@codemirror/lang-css": "6.2.1",
@@ -376,6 +376,7 @@
     "autoprefixer": "10.4.14",
     "boxen": "^7.1.1",
     "chance": "1.1.11",
+    "change-case-all": "^2.1.0",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
     "commitlint-plugin-function-rules": "1.7.1",
