--- a/package.json
+++ b/package.json
@@ -390,6 +390,8 @@
     "cypress-network-idle": "1.14.2",
     "cypress-terminal-report": "6.0.1",
     "cz-customizable": "6.3.0",
+    "del": "^7.1.0",
+    "del-cli": "^5.1.0",
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
     "eslint": "8.57.0",
