wip: custom codegen

--- a/libs/frontend/domain/app/project.json
+++ b/libs/frontend/domain/app/project.json
@@ -11,7 +11,10 @@
   ],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint"
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["{projectRoot}/**/*.{ts,tsx,js,jsx}"]
+      }
     },
     "test": {
       "executor": "@nx/jest:jest",
