--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.4",
-    "@graphql-codegen/typescript-document-nodes": "4.0.7",
+    "@graphql-codegen/typescript-document-nodes": "4.0.9",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
     "@graphql-typed-document-node/core": "3.2.0",
@@ -179,7 +179,7 @@
     "framer-motion": "6.3.3",
     "fs-extra": "11.2.0",
     "glob": "10.3.12",
-    "graphql": "16.6.0",
+    "graphql": "16.8.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
     "graphql-ws": "5.16.0",
@@ -265,16 +265,16 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.8",
+    "@0no-co/graphqlsp": "1.12.12",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/client-preset": "4.3.0",
+    "@codelab-app/client-preset": "latest",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
-    "@graphql-codegen/schema-ast": "4.0.2",
-    "@graphql-codegen/typescript": "4.0.7",
+    "@graphql-codegen/schema-ast": "4.1.0",
+    "@graphql-codegen/typescript": "4.0.9",
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
-    "@graphql-codegen/typescript-operations": "4.2.1",
+    "@graphql-codegen/typescript-operations": "4.2.3",
     "@graphql-codegen/visitor-plugin-common": "^5.3.1",
     "@graphql-eslint/eslint-plugin": "3.20.1",
     "@graphql-hive/cli": "0.34.0",
