--- a/libs/external/codelab-codegen/client-preset/project.json
+++ b/libs/external/codelab-codegen/client-preset/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/external/codelab-codegen/client-preset/src",
   "projectType": "library",
-  "tags": ["scope:backend"],
+  "tags": ["projectType:library", "type:concrete"],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -20,8 +20,54 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/external/codelab-codegen/client-preset/jest.config.ts"
+        "jestConfig": "libs/external/codelab-codegen/client-preset/jest.config.ts",
+        "runInBand": true,
+        "reporters": ["default"]
       }
+    },
+    "test:integration": {
+      "defaultConfiguration": "dev",
+      "options": {
+        "memoryLimit": 8192,
+        "color": true,
+        "testPathPattern": ["i.spec.ts"],
+        "runInBand": true,
+        "jestConfig": "libs/external/codelab-codegen/client-preset/jest.config.ts"
+      },
+      "configurations": {
+        "dev": {
+          "reporters": ["default"]
+        },
+        "test": {
+          "reporters": ["default"]
+        },
+        "ci": {
+          "parallel": 3
+        }
+      },
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "test:unit": {
+      "defaultConfiguration": "dev",
+      "options": {
+        "color": true,
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "testPathIgnorePatterns": ["i.spec.ts"],
+        "jestConfig": "libs/external/codelab-codegen/client-preset/jest.config.ts"
+      },
+      "configurations": {
+        "dev": {
+          "reporters": ["default"]
+        },
+        "test": {
+          "reporters": ["default"]
+        },
+        "ci": {}
+      },
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     }
   }
 }
