--- a/libs/frontend/infra/mobx/tsconfig.json
+++ b/libs/frontend/infra/mobx/tsconfig.json
@@ -8,6 +8,7 @@
     }
   ],
   "compilerOptions": {
+    "jsx": "react-jsx",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
