--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/cssinjs": "1.20.0",
-    "@ant-design/icons": "5.3.0",
+    "@ant-design/icons": "5.4.0",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@ant-design/pro-components": "2.7.10",
     "@apollo/client": "3.7.15",
@@ -445,6 +445,10 @@
     "verdaccio": "^5.0.4",
     "vite": "5.3.3",
     "wait-on": "6.0.1"
+  },
+  "resolutions": {
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9"
   },
   "nx": {
     "includedScripts": []
