--- a/libs/frontend/abstract/application/tsconfig.lib.json
+++ b/libs/frontend/abstract/application/tsconfig.lib.json
@@ -5,18 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": [
-    "src/**/*.ts",
-    "../domain/src/component/component.repo.interface.ts",
-    "../domain/src/domain/domain.repo.interface.ts",
-    "../domain/src/element/element.repo.interface.ts",
-    "../domain/src/field/field.repo.interface.ts",
-    "../domain/src/redirect/redirect.repo.interface.ts",
-    "../domain/src/resource/resource.repo.interface.ts",
-    "../domain/src/store/store.repo.interface.ts",
-    "../domain/src/tag/tag.repo.interface.ts",
-    "../domain/src/type/type.repo.interface.ts",
-    "../domain/src/prop/prop.repo.interface.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
