wip: preparing test env

--- a/.env.test.example
+++ b/.env.test.example
@@ -9,6 +9,7 @@
 NEXT_PUBLIC_WEB_HOST=http://127.0.0.1:3001
 NEXT_PUBLIC_API_HOSTNAME=http://127.0.0.1
 NEXT_PUBLIC_API_PORT=4001
+NEXT_PUBLIC_API_BASE_PATH=/graphql
 
 #
 # Auth0 - Next - those are required by nextjs-auth0 - don't change their names
