--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -15,6 +15,9 @@
       "configurations": {
         "dev": {
           "ui": true
+        },
+        "test": {
+          "ui": true
         }
       }
     },
