--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ NX_CLOUD_ACCESS_TOKEN=
 NEXT_PUBLIC_WEB_HOST=http://127.0.0.1:3000
 NEXT_PUBLIC_API_HOSTNAME=http://127.0.0.1
 NEXT_PUBLIC_API_PORT=4000
+NEXT_PUBLIC_API_BASE_PATH=/graphql
 
 #
 # Auth0 - Next - those are required by nextjs-auth0 - don't change their names
