fix: running e2e specs locally (#3436)
* fix: form stopped working

* wip: writing app specs

* wip: app e2e spec

* revert: unwanted changes

* refactor: remove user json from code

* wip: preparing test env

* refactor: add api base path to graphql

---------

Co-authored-by: Webber Wang <webber@codelab.app>

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ NX_CLOUD_ACCESS_TOKEN=
 NEXT_PUBLIC_WEB_HOST=http://127.0.0.1:3000
 NEXT_PUBLIC_API_HOSTNAME=http://127.0.0.1
 NEXT_PUBLIC_API_PORT=4000
+NEXT_PUBLIC_BASE_API_PATH=/api/v1
 
 #
 # Auth0 - Next - those are required by nextjs-auth0 - don't change their names
