wip: app router routing (#3435)
* refactor: migrate to react-use

* wip: form stopped working

* fix: running e2e specs locally (#3436)

* fix: form stopped working

* wip: writing app specs

* wip: app e2e spec

* revert: unwanted changes

* refactor: remove user json from code

* wip: preparing test env

* refactor: add api base path to graphql

---------

Co-authored-by: Webber Wang <webber@codelab.app>

* fix: form stopped working

---------

Co-authored-by: assim habeek <33001357+assimhabeek@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "e2e": "nx e2e e2e -c test --skipServe --watch",
+    "e2e": "nx e2e web-e2e -c test",
     "e2e:web": "nx serve web -c test",
     "e2e:api": "nx serve api -c test",
     "cli": "scripts/nx/cli.sh",
@@ -34,7 +34,6 @@
   },
   "private": true,
   "dependencies": {
-    "@ant-design/cssinjs": "1.20.0",
     "@ant-design/icons": "5.4.0",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@ant-design/pro-components": "2.7.10",
@@ -133,7 +132,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
     "@rjsf/antd": "5.18.5",
     "@rjsf/core": "5.18.3",
@@ -150,7 +148,7 @@
     "adm-zip": "0.5.10",
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
-    "antd": "5.18.3",
+    "antd": "5.20.0",
     "auth0": "4.7.0",
     "auto-bind": "^5.0.1",
     "axios": "1.7.1",
@@ -232,6 +230,7 @@
     "react-sticky-box": "2.0.0",
     "react-stickynode": "4.1.0",
     "react-syntax-highlighter": "15.5.0",
+    "react-use": "^17.5.1",
     "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
@@ -265,10 +264,10 @@
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "1.12.12",
+    "@codelab-app/client-preset": "latest",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
-    "@codelab-app/client-preset": "latest",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
     "@graphql-codegen/schema-ast": "4.1.0",
     "@graphql-codegen/typescript": "4.0.9",
