--- a/.circleci/config/jobs/e2e-cypress.yml
+++ b/.circleci/config/jobs/e2e-cypress.yml
@@ -1,35 +1,33 @@
 executor: docker-node-neo4j
-resource_class: medium
+resource_class: large
 # Cypress requires record for parallel to work according to https://github.com/cypress-io/cypress/issues/2520
-# parallelism: 4
+parallelism: 4
 steps:
   - restore-workspace
-  - run: pnpm npx playwright install-deps
   - setup_remote_docker:
       version: default
       # No need since we're not building anything
       # Also very expensive in terms of storage
       # docker_layer_caching: true
+  - run: pnpm cypress install
+  - run: pnpm cypress verify
   - run:
       name: 'Run E2E Tests'
       environment:
         # https://github.com/cypress-io/circleci-orb/issues/386
       command: |
-        echo 'export SHARD="$((${CIRCLE_NODE_INDEX}+1))"' >> "$BASH_ENV"
+        echo 'export CI_BUILD_ID="$(echo ${CIRCLE_SHA1:0:8})-${CIRCLE_BUILD_NUM}"' >> "$BASH_ENV"
         source "$BASH_ENV"
-
-        echo $SHARD;
-        echo $CIRCLE_NODE_TOTAL;
-
-        pnpm nx e2e web-e2e -c ci
+        echo "CI Build ID: $CI_BUILD_ID"
+        pnpm nx e2e e2e -c ci --ci-build-id=$CI_BUILD_ID
   - store_artifacts:
-      path: ~/project/apps/web-e2e/src/videos
-      destination: playwright/videos
+      path: ~/project/apps/e2e/src/videos
+      destination: cypress/videos
   - store_artifacts:
-      path: ~/project/apps/web-e2e/src/screenshots
-      destination: playwright/screenshots
+      path: ~/project/apps/e2e/src/screenshots
+      destination: cypress/screenshots
   - store_artifacts:
-      path: ~/project/apps/web-e2e/src/data
-      destination: playwright/data
+      path: ~/project/apps/e2e/src/data
+      destination: cypress/data
   - store_test_results:
       path: ./tmp/reports/e2e
