--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -10,9 +10,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": [
-          "apps/web/tsconfig(.*)?.json"
-        ]
+        "project": ["apps/web/tsconfig(.*)?.json"]
       },
       "rules": {
         "@next/next/no-html-link-for-pages": ["error", "apps/web/pages"],
