--- a/libs/frontend/infra/action/project.json
+++ b/libs/frontend/infra/action/project.json
@@ -10,16 +10,6 @@
     "layer:infra",
     "scope:frontend"
   ],
-  "targets": {
-    "build": {
-      "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/libs/frontend/infra/action",
-        "main": "libs/frontend/infra/action/src/index.ts",
-        "tsConfig": "libs/frontend/infra/action/tsconfig.lib.json",
-        "assets": ["libs/frontend/infra/action/*.md"]
-      }
-    }
-  }
+  "// targets": "to see all targets run: nx show project frontend-infra-action --web",
+  "targets": {}
 }
