--- a/package.json
+++ b/package.json
@@ -197,7 +197,6 @@
     "nestjs-pino": "4.0.0",
     "nestjs-typebox": "3.0.0-next.8",
     "next": "14.2.5",
-    "next-http-proxy-middleware": "1.2.6",
     "next-safe-action": "^7.1.3",
     "next-seo": "6.5.0",
     "next-themes": "^0.3.0",
@@ -441,7 +440,10 @@
     "vite": "5.3.3",
     "wait-on": "6.0.1"
   },
-  "resolutions": {},
+  "resolutions": {
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0"
+  },
   "nx": {
     "includedScripts": []
   },
