--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,8 +6,8 @@ API_LOG_LEVEL=silent
 #
 # Auth0 users
 #
-AUTH0_CYPRESS_USERNAME=cypress@codelab.app
-AUTH0_CYPRESS_PASSWORD=
+AUTH0_E2E_USERNAME=cypress@codelab.app
+AUTH0_E2E_PASSWORD=
 
 #
 # Auth0
