--- a/apps/api/.env.test.example
+++ b/apps/api/.env.test.example
@@ -1,8 +1,8 @@
 #
 # Auth0 users
 #
-AUTH0_CYPRESS_USERNAME=cypress@codelab.app
-AUTH0_CYPRESS_PASSWORD=
+AUTH0_E2E_USERNAME=cypress@codelab.app
+AUTH0_E2E_PASSWORD=
 
 #
 # Neo4j
