--- a/apps/web-e2e/.env.example
+++ b/apps/web-e2e/.env.example
@@ -1,8 +1,8 @@
 #
 # Auth0 users
 #
-AUTH0_USERNAME=cypress@codelab.app
-AUTH0_PASSWORD=
+AUTH0_E2E_USERNAME=cypress@codelab.app
+AUTH0_E2E_PASSWORD=
 
 #
 # Auth0
