--- a/package.json
+++ b/package.json
@@ -297,7 +297,7 @@
     "@nx/webpack": "19.5.7",
     "@nx/workspace": "19.5.7",
     "@parcel/watcher": "^2.4.1",
-    "@playwright/test": "^1.44.1",
+    "@playwright/test": "1.46.0",
     "@storybook/addon-essentials": "8.1.11",
     "@storybook/addon-interactions": "8.1.11",
     "@storybook/addon-themes": "^8.1.11",
