e2e: fix build for private repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ commands:
   build-repo:
     description: Build Repo
     steps:
-      - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail --base=$NX_BASE --head=$NX_HEAD
+      - nx/set-shas
+      - run: pnpm nx affected --target=build --parallel=3 -c ci --base=$NX_BASE --head=$NX_HEAD --nx-bail
   clear-jest-cache:
     description: Clear Jest Spec
     steps:
@@ -461,7 +462,6 @@ jobs:
     steps:
       - checkout
       - setup-env
-      - nx/set-shas
       - install-nvm
       - install-pnpm
       - install-packages
