--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -9,7 +9,8 @@ steps:
   #     command: ./scripts/nx/reset-cache.sh
   # Can't use `pnpm cli` doesn't exist yet
   - nx/set-shas
-  - run: pnpm nx affected --target=build --parallel=3 -c ci --base=$NX_BASE --head=$NX_HEAD --nx-bail
+  - echo $CIRCLE_API_TOKEN
+  - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail --verbose
   # - save_cache:
   #     name: 'Save NX Cache'
   #     # nx doesn't use `lockfile.hash` anymore
