--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -9,7 +9,7 @@ steps:
   #     command: ./scripts/nx/reset-cache.sh
   # Can't use `pnpm cli` doesn't exist yet
   - nx/set-shas
-  - echo $CIRCLE_API_TOKEN
+  - run: echo $CIRCLE_API_TOKEN
   - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail --verbose
   # - save_cache:
   #     name: 'Save NX Cache'
