refactor: fix integration specs (#3445)
* test: integration spec fixed

* wip: fixing middleware

wip: fixing middleware

* wip: fixing middleware

* wip: fixing playwright auth request

* wip: fixing middleware

* wip: fixing middleware

* fix: build errors from component

* refactor: middleware session

* e2e: enable dev checks

* e2e: fix build for private repo

* e2e: fix build for private repo

* e2e: fix build for private repo

* e2e: fix build for private repo

* e2e: fix build for private repo

--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -8,7 +8,9 @@ steps:
   #     name: 'Monitor NX Cache Size'
   #     command: ./scripts/nx/reset-cache.sh
   # Can't use `pnpm cli` doesn't exist yet
-  - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
+  - nx/set-shas
+  - run: echo $CIRCLE_API_TOKEN
+  - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail --verbose
   # - save_cache:
   #     name: 'Save NX Cache'
   #     # nx doesn't use `lockfile.hash` anymore
