--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -12,7 +12,9 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
+      context:
+        # Contains circleci api token for nx orb
+        - build
   # - deploy-preview:
   #     # requires:
   #     #   - setup-workspace
@@ -25,7 +27,6 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
       requires:
         - setup-workspace
   - codegen:
@@ -34,7 +35,6 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
       requires:
         - setup-workspace
   - unit:
@@ -43,7 +43,6 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
       requires:
         - setup-workspace
   - integration:
@@ -52,7 +51,6 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
       requires:
         - setup-workspace
   - e2e:
@@ -61,7 +59,6 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
       requires:
         - setup-workspace
   - notify-success:
@@ -70,7 +67,6 @@ jobs:
           ignore:
             - master
             - staging
-            - dev
       requires:
         - lint
         - codegen
