--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ commands:
   build-repo:
     description: Build Repo
     steps:
-      - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
+      - nx/set-shas
+      - run: echo $CIRCLE_API_TOKEN
+      - run: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail --verbose
   clear-jest-cache:
     description: Clear Jest Spec
     steps:
@@ -577,19 +579,19 @@ workflows:
   app-pr:
     jobs:
       - setup-workspace:
+          context:
+            - build
           filters:
             branches:
               ignore:
                 - master
                 - staging
-                - dev
       - lint:
           filters:
             branches:
               ignore:
                 - master
                 - staging
-                - dev
           requires:
             - setup-workspace
       - codegen:
@@ -598,7 +600,6 @@ workflows:
               ignore:
                 - master
                 - staging
-                - dev
           requires:
             - setup-workspace
       - unit:
@@ -607,7 +608,6 @@ workflows:
               ignore:
                 - master
                 - staging
-                - dev
           requires:
             - setup-workspace
       - integration:
@@ -616,7 +616,6 @@ workflows:
               ignore:
                 - master
                 - staging
-                - dev
           requires:
             - setup-workspace
       - e2e:
@@ -625,7 +624,6 @@ workflows:
               ignore:
                 - master
                 - staging
-                - dev
           requires:
             - setup-workspace
       - notify-success:
@@ -634,7 +632,6 @@ workflows:
               ignore:
                 - master
                 - staging
-                - dev
           requires:
             - lint
             - codegen
