--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -25,7 +25,7 @@
       "outputs": ["{workspaceRoot}/dist/.playwright/apps/web-e2e"],
       "options": {
         "config": "apps/web-e2e/playwright.config.ts",
-        "headed": true,
+        "headed": false,
         "ui": true
       },
       "configurations": {
